syntax = "proto3";
package infrpc;

service InfRPC {
    rpc WritePoints(WritePointsRequest) returns (WritePointsReply){}
}
message WritePointsRequest {
    uint64 shardID = 1;
    repeated bytes points = 2;
}
message WritePointsReply {
    string err = 1;
}
